[project]
name = "cuemol2"
version = "0.0.1"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build-core]
wheel.py-api = "cp37"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = ["-G", "Unix Makefiles"]
wheel.packages = ["python/cuemol"]

# [tool.scikit-build.cmake.define]
# LIBCUEMOL2_ROOT = "/opt/cuemol2"

# [tool.scikit-build.wheel.packages]
# "example/mypackage" = "python/mypackage"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
known_first_party = ["pfdock", "pfdock_internal"]
line_length = 88
multi_line_output = 3
use_parentheses = true
